@@ -1,4 +1,5 @@
 Changes in version 1.23.7 (2017-10-19)
+  - Provide the URL of each pathway in its original database.
   - New vignette describing pathway analysis of metabolic activities.
 
 Changes in version 1.23.6 (2017-10-18)
